kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psre-api
  namespace: psre

  labels:
    app: psre-api
    app.kubernetes.io/name: psre-api
    app.kubernetes.io/part-of: production-sre-platform

spec:
  replicas: 3

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: psre-api

  template:
    metadata:
      labels:
        app: psre-api
        app.kubernetes.io/name: psre-api
        app.kubernetes.io/part-of: production-sre-platform

    spec:
      imagePullSecrets:
        - name: ghcr-secret
      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true

        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: psre-api

          image: ghcr.io/rs301/psre-api:0.2.0

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          securityContext:
            allowPrivilegeEscalation: false

            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /ready
              port: http

            initialDelaySeconds: 5
            periodSeconds: 10

            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http

            initialDelaySeconds: 10
            periodSeconds: 15

            timeoutSeconds: 2
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health
              port: http

            failureThreshold: 30
            periodSeconds: 2

          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}
