kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: psre-api
  namespace: psre

  labels:
    app: psre-api
    app.kubernetes.io/part-of: production-sre-platform

  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"

spec:
  type: ClusterIP

  selector:
    app: psre-api

  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
