kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: psre-api
  namespace: psre

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: psre.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: psre-api

                port:
                  name: http
